--- a/client/src/components/assets/css/search.css
+++ b/client/src/components/assets/css/search.css
@@ -1,12 +1,20 @@
-.search-input {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border: none;
-    background: rgba(0, 0, 0, 0.3);
-}
-
-.search-btn {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    background: rgba(0, 0, 0, 0.3);
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active,
+select:hover,
+select:active,
+select:focus {
+  outline: 0px !important;
+  -webkit-appearance: none;
+  box-shadow: none !important;
+  border: 0px !important;
 }
