--- a/client/src/components/assets/css/sidebar.css
+++ b/client/src/components/assets/css/sidebar.css
@@ -1,45 +1,44 @@
 .sidenav {
-    width: 240px;
-    background: #011627;
-    position: absolute;
-    height: 95vh;
-    padding: 0 30px;
-    left: -100%;
-    transition: all 0.8s;
-    z-index: 1;
+  width: 20rem;
+  background: #1a1a1a;
+  position: absolute;
+  height: 95vh;
+  padding: 0 30px;
+  left: -100%;
+  transition: all 0.8s;
+  z-index: 1;
 }
 
-
 .sidenav.active {
-    left: 0;
+  left: 0;
 }
 
 .logo {
-    width: 40px;
-    background-color: #fff;
-    border-radius: 50%;
-    padding: 2px;
+  width: 40px;
+  background-color: #fff;
+  border-radius: 50%;
 }
 
 ul {
-    padding: 0;
+  padding: 0;
 }
 
 ul li {
-    list-style-type: none;
-    margin: 10px 0;
+  list-style-type: none;
+  margin: 15px 0;
 }
 
 ul li .link {
-    color: #eaecef;
-    text-decoration: none;
-    font-size: 16px;
-    display: block;
-    padding: 8px 15px;
-    border-radius: 6px;
+  color: #eaecef;
+  text-decoration: none;
+  font-size: 16px;
+  display: block;
+  padding: 8px 15px;
 }
 
-ul li .link:hover,ul li.link.active {
-    background: #172b4d;
-    color: #eaecef;
+ul li .link:hover,
+ul li.link.selected {
+  background: rgba(255, 255, 255, 0.11);
+  color: #eaecef;
+  border-left: 1px solid #ccc;
 }
