--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,32 +1,32 @@
 * {
-	font-family: "Montserrat", "sans-serif";
+  font-family: "Lato", "sans-serif";
 }
 
 .topic {
-	font-size: 4rem;
-	padding-top: 2rem;
-	width: 8rem;
-	height: 8rem;
-	border-radius: 50%;
+  font-size: 4rem;
+  padding-top: 2rem;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
 }
 
 .card-title h1 {
-	font-weight: bold !important;
+  font-weight: bold !important;
 }
 
 .form-border .form-control {
-	border: 1px solid #bdbdbd !important;
+  border: 1px solid #bdbdbd !important;
 }
 select {
-	border: 1px solid #bdbdbd !important;
+  border: 1px solid #bdbdbd !important;
 }
 
 ::-webkit-scrollbar {
-	width: 5px;
-	height: 8px;
+  width: 5px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #3980f3;
-	border-radius: 20px;
+  background: #3980f3;
+  border-radius: 20px;
 }
